no MaxPermSize
Signed-off-by: Christian Dietrich <christian.dietrich@itemis.de>