@@ -13,7 +13,7 @@
 
 	<properties>
 		<os-jvm-flags />
-		<memory-settings>-Xmx2G -XX:MaxPermSize=256m</memory-settings>
+		<memory-settings>-Xmx2G</memory-settings>
 		<debug-settings>-Xdebug
 			-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=y</debug-settings>
 	</properties>
